abe-desktop (11.3) UNRELEASED; urgency=low

  * Add dependency on ttf-atarismall which is used now in Xresources
  * Add dnssec-trigger for another opportunistic systray icon
  * Switch dependencies from abe-commandline to abe-commandline-local.
  * Suggest system-config-printer for system-config-printer-applet.

 -- Axel Beckert <abe@deuxchevaux.org>  Wed, 18 Jun 2014 01:26:22 +0200

abe-desktop (11.2) unstable; urgency=low

  * Downgrade gnome-settings-daemon to Suggests
  * Add connman{,-ui} as wicd/network-manager alternative
  * abe-desktop-awesome suggests owncloud-client, mirall or polybox-client
  * abe-desktop recommends abe-desktop-extras
  * Allow systemd (i.e. journalctl) as alternative to busybox-syslogd.
  * Bump Standards-Version to 3.9.5 (no changes)
  * Delete empty lintian override files

 -- Axel Beckert <abe@deuxchevaux.org>  Mon, 09 Jun 2014 17:53:50 +0200

abe-desktop (11.1) unstable; urgency=low

  * Fix typos: partioning → partitioning, packages → packaging
  * abe-desktop suggests abe-x-browsers
  * Bump Standards-Version to 3.9.4
  * Remove no more needed lintian overrides (empty-binary-package and
    extended-description-is-probably-too-short)

 -- Axel Beckert <abe@deuxchevaux.org>  Sat, 25 May 2013 23:54:32 +0200

abe-desktop (11) unstable; urgency=low

  * abe-desktop suggests abe-archive-tools, abe-commandline-media,
    abe-fun, abe-games, abe-packages-dev, abe-tablet, and
    abe-window-managers.
  * Suggest magit, as magit keybindings are found in emacs.el

 -- Axel Beckert <abe@deuxchevaux.org>  Wed, 23 Jan 2013 00:07:13 +0100

abe-desktop (10) unstable; urgency=low

  * Split source package into two source packages:
    + abe-desktop contains only the abe-desktop* binary packages, i.e. all
      packages which are directly related to my desktop setup.
    + abe-metapackages contains the remaining packages, which are not
      directly related to my desktop setup and can also used on
      non-desktops.